--- a/ui.css
+++ b/ui.css
@@ -2,7 +2,8 @@
 #wrap {
   width: 100%;
   height: 100%;
-  padding-right: 180px; /* 오른쪽 위치한 헤더 영역만큼 내부 여백을 둔다 */
+  /* padding-right: 180px;  */
+  /* 오른쪽 위치한 헤더 영역만큼 내부 여백을 둔다 */
 }
 
 /* SEO 때문에 화면에는 표기하지 않지만 전체 페이지에 대한 제목을 부여 */
@@ -10,6 +11,7 @@
   font-size: 0;
 }
 
+/* HEADER 영역 */
 header {
   background-image: url(./images/bg.jpg);
   width: 180px;
@@ -34,6 +36,59 @@ header .logo_box img {
   object-fit: fill;
 }
 
+header nav {
+  width: 100%;
+  height: 100%;
+}
+header nav ul {
+  width: 180px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+header nav ul li {
+  margin: 0 0 10px 30px;
+  position: relative;
+  padding-left: 15px;
+}
+header nav ul li a {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 600;
+  line-height: 30px;
+  text-decoration: none;
+}
+header nav ul li:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: #fff;
+  position: absolute;
+  left: 0px;
+  top: 13px;
+}
+header nav ul li:hover a {
+  color: #ed3140;
+}
+header nav ul li:hover:after {
+  background: #ed3140;
+}
+/* 메뉴에 해당하는 컨텐츠가 활성화 되었을 때 
+그 메뉴는 계속 선택된 상태처럼 보여야 한다
+그 상태 헨들링을 on 클래스로 한다 */
+header nav ul li.on a {
+  color: #ed3140;
+}
+header nav ul li.on:after {
+  background: #ed3140;
+}
+
+
+
+/* 컨텐츠 영역 */
 #container {
   background-color: aquamarine;
   width: 100%;
