--- a/ui.css
+++ b/ui.css
@@ -7,10 +7,10 @@ html, body {
 
 /* 화면 전체를 감싸는 wrap */
 #wrap {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
-  padding-right: 180px; 
-  /* 오른쪽 위치한 헤더 영역만큼 내부 여백을 둔다 */
+  padding-right: 180px; /* 오른쪽 위치한 헤더 영역만큼 내부 여백을 둔다 */
+
 }
 
 /* SEO 때문에 화면에는 표기하지 않지만 전체 페이지에 대한 제목을 부여 */
@@ -18,7 +18,11 @@ html, body {
   font-size: 0;
 }
 
-/* HEADER 영역 */
+
+
+/* 
+  HEADER 영역 
+*/
 header {
   background-image: url(./images/bg.jpg);
   width: 180px;
@@ -98,7 +102,11 @@ header nav ul li.on:after {
   background: #ed3140;
 }
 
-/* 컨텐츠 영역 */
+
+
+/* 
+  컨텐츠 영역 
+*/
 #container {
   background-color: aquamarine;
   width: 100%;
@@ -131,10 +139,101 @@ header nav ul li.on:after {
   top: 0;
 }
 
+
+/* 
+  개별 페이지 영역 내부 
+*/
+.pargrph_tit{
+  margin-bottom: 50px;
+  font-size: 24px;
+  color: #fff;
+  position: relative;
+}
+.pargrph_tit:after{
+  content: "";
+  display: block;
+  width: 30px;
+  height: 8px;
+  background: #ed3140;
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+}
+.text_box {
+  position: relative;
+}
+.text_box h4 {
+  font-size: 40px;
+  color: #d6d4d4;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+.text_box p {
+  margin-bottom: 50px;
+  color: #ababab;
+  line-height: 25px;
+}
+.text_box:nth-child(odd) {
+  text-align: left;
+}
+.text_box:nth-child(even) {
+  text-align: right;
+}
+/* 글과 함깨 보여줄 이미지 */
+.text_box:nth-child(1):after {
+  content: "";
+  display: block;
+  width: 206px;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url(images/dhpublogo.png) no-repeat right top;
+  background-size: auto;
+}
+.text_box:nth-child(1) p {
+  /* width: 100%; */
+  padding-right: 206px; /*이미지 만큼 내부 여백으로 밀어내서 텍스트랑 그림이랑 안겹치게 하기 */
+}
+.text_box:nth-last-child(1) {
+
+}
+.text_box:nth-last-child(1):before {
+  content: "";
+  display: block;
+  width: 150px;
+  height: 250px;
+  position: absolute;
+  left: 0;
+  top: 70px;
+  background: url(images/dhpublogo.png) no-repeat right top;
+  background-size: 150px;
+}
+.text_box:nth-last-child(1):after {
+  content: "";
+  display: block;
+  width: 150px;
+  height: 250px;
+  position: absolute;
+  right: 0;
+  top: -20px;
+  background: url(images/dhpublogo.png) no-repeat right top;
+  background-size: 150px;
+}
+.text_box:nth-last-child(1) p {
+  padding: 0 200px;
+}
+.text_box:nth-last-child(1) h4 {
+  color: #ed3140;
+}
+
 /* 메뉴 선택 시 현재 화면 this */
 #container .content.this {
   width: 100%;
   left: 0 !important;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
 /* 선택한 화면에 대해서 가상 요소들(텍스트, 이미지, 왼쪽 선)가 안보이게 처리 */
 /* 다중 선택자로 prev, next 도 한세트 씩 추가해준다 */
@@ -233,14 +332,20 @@ header nav ul li.on:after {
   left: 0;
   bottom: 0;
 }
+#container .content.this .conbox{
+  max-width: 1100px;
+  margin: 0 auto;
+}
 #container .content .conbox .content_wrap {
   opacity: 0;
 }
+
 #container .content.this .conbox .content_wrap {
   padding: 30px 50px 50px;
   opacity: 1;
+  transition: 1.7s;
+  transition-delay: .8s;
 }
-
 
 /* 각 메뉴에 보여줄 이미지들 가상 요소 선택자로 생성 */
 #container .content .conbox:before {
@@ -270,28 +375,30 @@ header nav ul li.on:after {
 */
 #container #menu1 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 나중에 반복 패턴의 배경 이미지 넣기 */
-  background-color: aliceblue; 
+  background-color: #000; 
   left: 0%;
 }
 #container #menu2 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: beige;
+  background-color: midnightblue;
   left: 25%;
 }
 #container #menu3 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: thistle;
+  background-color: darkblue;
   left: 50%;
 }
 #container #menu4 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: rosybrown;
+  background-color: #7e7e7e;
   left: 75%;
 }
 
 
 
-/* FOOTER 영역 */
+/* 
+  FOOTER 영역 
+*/
 footer {
   width: 180px;
   box-sizing: border-box;
