--- a/ui.css
+++ b/ui.css
@@ -1,8 +1,39 @@
+/* 
+  공통 영영 
+*/
+/* 제목에 사용할 블릿 */
+.bullet_list li:after {
+  content: "";
+  display: block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: #3c4147;
+  position: absolute;
+  left: 0;
+  top: 8px;
+}
+
 html, body {
   margin: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+/* 버튼 */
+.commbtn {
+  width: 150px;
+  height: 35px;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+  line-height: 35px;
+  border-radius: 5px;
+  text-align: center;
+}
+.commbtn.pink {
+  background: #f92d68;
+  color: #fff;
 }
 
 /* 화면 전체를 감싸는 wrap */
@@ -393,6 +424,100 @@ header nav ul li.on:after {
   background-color: #7e7e7e;
   left: 75%;
 }
+
+
+/* 
+  두번째 메뉴 
+*/
+#menu2.content h3 {
+  font-size: 0;
+}
+#menu2.content.this .conbox {
+  background: url(images/desk.avif) no-repeat;
+  max-width: 100%;
+  background-size: 100%;
+}
+.notebook {
+  width: 954px;
+  height: 650px;
+  margin: 100px auto 0;
+  background: url(images/notebook1.jpg) no-repeat;
+  background-size: 954px;
+  position: relative;
+}
+.detail_content {
+  width: 719px;
+  height: 453px;
+  position: absolute;
+  left: 117px;
+  top: 38px;
+  padding: 30px 0;
+}
+.img_book {
+  width: 200px;
+  float: left;
+}
+.img_book img {
+  width: 200px;
+}
+.book_description {
+  width: 449px;
+  float: left;
+  padding: 20px 20px 40px;
+}
+/* 모니터에 그림 띄우기 위해 사용한 float 해제용 */
+.detail_content:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.book_description h4 {
+  font-size: 31px;
+  font-weight: 700;
+  color: #f92d68;
+  line-height: 31px;
+}
+.book_description ul li em {
+  font-weight: 700;
+}
+.point_text {
+  padding: 10px 30px 0 0;
+  font-size: 12px;
+  color: #666;
+}
+.point_text strong {
+  display: block;
+  padding: 0 0 10px 46px;
+  background: url(/images/twit.png) no-repeat;
+  background-size: 40px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #3c4147;
+}
+.bullet_list {
+  margin-top: 20px;
+}
+.bullet_list li {
+  margin-bottom: 5px;
+  padding-left: 10px;
+  font-size: 12px;
+  color: #3c4147;
+  position: relative;
+}
+.bullet_list li:after {
+  content: "";
+  display: block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background: #3c4147;
+  position: absolute;
+  left: 0;
+  top: 8px;
+}
+
+
+
 
 
 
