--- a/ui.css
+++ b/ui.css
@@ -494,6 +494,50 @@ header nav ul li.on:after {
   font-weight: 700;
   color: #3c4147;
 }
+
+/* roll 영역 */
+.book_rollwrap {
+  width: 954px;
+  height: 150px;
+  margin: 40px auto 0;
+  padding: 0 20px;
+  position: relative;
+}
+.book_rollwrap > button {
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 100%;
+  top: 0;
+}
+.book_rollwrap > button.roll_left {
+  background: url(images/dhpublogo.png) no-repeat center;
+  background-size: 20px;
+  left: 0; 
+}
+.book_rollwrap > button.roll_right {
+  background: url(images/dhpublogo.png) no-repeat center;
+  background-size: 20px;
+  right: 0; 
+}
+.book_rollwrap .book_roll {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.book_rollwrap .book_roll ul {
+  width: 1000%;
+}
+.book_rollwrap .book_roll ul li {
+  float: left;
+  width: 152px;
+  text-align: center;
+}
+.book_rollwrap .book_roll ul li img {
+  width: 100px;
+}
+
+
 .bullet_list {
   margin-top: 20px;
 }
