--- a/ui.css
+++ b/ui.css
@@ -444,6 +444,15 @@ header nav ul li.on:after {
   background: url(images/notebook1.jpg) no-repeat;
   background-size: 954px;
   position: relative;
+  transform-style: preserve-3d;
+  transform: matrix3d(1,0,0, 0,0,0.1, 0,0,0, 0,1,0, 0,0,0, 1);
+  transition: ease-in-out 1s;
+  transition-delay: .8s;
+  opacity: 0;
+}
+#menu2.this .notebook{
+  transform: matrix3d(1,0,0, 0,0,1, 0,0,0, 0,1,0, 0,0,0, 1);
+  opacity: 1;
 }
 .detail_content {
   width: 719px;
@@ -561,7 +570,86 @@ header nav ul li.on:after {
 }
 
 
-
+/* 
+  FAQ
+*/
+.tit_faq {
+  color: #fff;
+  position: relative;
+}
+.tit_faq strong {
+  font-size: 25px;
+  padding-right: 10px;
+}
+.tit_faq span {
+  font-size: 14px;
+  font-weight: 400;
+}
+.tit_faq:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 120px;
+  height: 150px;
+  background: url(images/dhpublogo.png) no-repeat;
+  right: 0;
+  top: 36px;
+}
+.acordio_box{
+  margin-top: 170px;
+}
+.acordio_box ol li {
+  width: 100%;
+  background: #fff;
+  border-top: 4px solid #ea657b;
+}
+.acordio_box ol li h4 {
+  display: block;
+  padding: 0 20px 20px 0;
+  margin: 20px 20px 0 30px;
+  cursor: pointer;
+  background: url(images/facebook.png) no-repeat right 11px;
+  font-weight: 400;
+  color: #3c4147;
+}
+.acordio_box ol li.on h4 {
+  background: url(images/instar.png) no-repeat right 11px;
+}
+.acordio_box ol li h4 span {
+  display: inline-block;
+  margin-right: 10px;
+  font-weight: 900;
+}
+.acordio_box ol li p {
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+.acordio_box ol li.on p {
+  height: auto;
+  padding: 30px 100px 70px;
+  background-color: #eee;
+  background-size: 100px auto;
+  background-repeat: no-repeat;
+  visibility: visible;
+  opacity: 1;
+}
+.acordio_box ol li:nth-of-type(1) p {
+  background-image: url(images/desk.avif);
+  background-position: 40px -1px;
+}
+.acordio_box ol li:nth-of-type(2) p {
+  background-image: url(images/desk.avif);
+  background-position: 40px 20px;
+}
+.acordio_box ol li:nth-of-type(3) p {
+  background-image: url(images/desk.avif);
+  background-position: 40px 13px;
+}
+.acordio_box ol li:nth-of-type(4) p {
+  background-image: url(images/desk.avif);
+  background-position: 40px 13px;
+}
 
 
 
