--- a/ui.css
+++ b/ui.css
@@ -35,6 +35,10 @@ html, body {
   background: #f92d68;
   color: #fff;
 }
+.commbtn.gray {
+  background: #3c4147;
+  color: #fff;
+}
 
 /* 화면 전체를 감싸는 wrap */
 #wrap {
@@ -651,6 +655,70 @@ header nav ul li.on:after {
   background-position: 40px 13px;
 }
 
+
+/* 
+  Contact Us
+*/
+#menu4 .content_wrap {
+  width: 800px;
+  margin: 100px auto 0;
+  padding: 30px;
+  background: rgba(255, 255, 255, .7);
+  border-radius: 5px;
+}
+#menu4 .content_wrap .form_tit{
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: 700;
+}
+.formlist {
+  padding-bottom: 150px;
+  background: url(images/desk.avif) no-repeat right bottom;
+  background-size: 200px;
+
+}
+.formlist ul li {
+  margin-bottom: 15px;
+  position: relative;
+  padding: 0 0 0 150px;
+}
+.formlist ul li label {
+  display: block;
+  width: 150px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 14px;
+  color: #555;
+}
+.formlist ul li label sub {
+  color: #ea657b;
+}
+.formlist ul li span {
+  display: block;
+}
+.formlist ul li .inputbox {
+  width: 100%;
+  height: 40px;
+  border: solid 1px #ddd;
+  background: #fff;
+}
+.formlist ul li .textbox {
+  width: 100%;
+  height: 200px;
+  border: solid 1px #ddd;
+  background: #fff;
+}
+.formlist ul li input,
+.formlist ul li textarea {
+  width: 100%;
+  height: 100%;
+}
+.btn_box {
+  width:100%;
+  margin-top: 20px;
+  text-align: center;
+}
 
 
 /* 
