--- a/ui.css
+++ b/ui.css
@@ -19,6 +19,8 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background: url(images/bg1.jpg) no-repeat;
+  background-size: cover;
 }
 /* 버튼 */
 .commbtn {
@@ -49,7 +51,7 @@ html, body {
 }
 
 /* SEO 때문에 화면에는 표기하지 않지만 전체 페이지에 대한 제목을 부여 */
-#wrap h1 {
+#wrap h1.seo {
   font-size: 0;
 }
 
@@ -143,7 +145,6 @@ header nav ul li.on:after {
   컨텐츠 영역 
 */
 #container {
-  background-color: aquamarine;
   width: 100%;
   height: 100%;
   position: relative;
@@ -410,22 +411,26 @@ header nav ul li.on:after {
 */
 #container #menu1 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 나중에 반복 패턴의 배경 이미지 넣기 */
-  background-color: #000; 
+  background: url(images/ptt4.jpg);
+  background-size: cover;
   left: 0%;
 }
 #container #menu2 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: midnightblue;
+  background: url(images/ptt1.jpg);
+  background-size: cover;
   left: 25%;
 }
 #container #menu3 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: darkblue;
+  background: url(images/ptt5.jpg);
+  background-size: cover;
   left: 50%;
 }
 #container #menu4 {
   /* 백그라운드 배경이미지 대신 임시로 색상 넣음 */
-  background-color: #7e7e7e;
+  background: url(images/ptt2.jpg);
+  background-size: cover;
   left: 75%;
 }
 
@@ -611,19 +616,45 @@ header nav ul li.on:after {
   display: block;
   padding: 0 20px 20px 0;
   margin: 20px 20px 0 30px;
+  /* background: url(images/arrow.jpg) no-repeat right top 11px; */
   cursor: pointer;
-  background: url(images/facebook.png) no-repeat right 11px;
   font-weight: 400;
   color: #3c4147;
+  position: relative;
 }
 .acordio_box ol li.on h4 {
-  background: url(images/instar.png) no-repeat right 11px;
+  /* background: url(images/arrow.jpg) no-repeat right top 11px; */
 }
 .acordio_box ol li h4 span {
   display: inline-block;
   margin-right: 10px;
   font-weight: 900;
 }
+.acordio_box ol li h4 .arr_btn {
+  display: flex;
+  background: url(images/arrow.jpg) no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 35px;
+  /* border: solid 1px; */
+  position: absolute;
+  right: 10px;
+  top: -10px;
+  transform: rotate(90deg);
+}
+.acordio_box ol li.on h4 .arr_btn {
+  display: flex;
+  background: url(images/arrow.jpg) no-repeat;
+  background-size: cover;
+  width: 35px;
+  height: 35px;
+  /* border: solid 1px; */
+  position: absolute;
+  right: 10px;
+  top: -10px;
+  transform: rotate(-90deg);
+}
+
 .acordio_box ol li p {
   height: 0;
   visibility: hidden;
@@ -719,7 +750,31 @@ header nav ul li.on:after {
   margin-top: 20px;
   text-align: center;
 }
-
+.thankyou_message {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+  display: none;
+}
+.thankyou_message > section > h1 {
+  color: #59c3c3;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.thankyou_message > section {
+  width: 550px;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 5px;
+  background: url(images/instar.png) no-repeat #fff right 11px bottom 11px;
+  background-size: 70px;
+  color: #3c4147;
+}
 
 /* 
   FOOTER 영역 
